# gpucall

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LAUNCH_MVP.md  LAUNCH_STATUS.md  LICENSE  MANIFEST.in  README.ja.md  README.md  RELEASE_CHECKLIST.md  RESTART_HANDOFF.md  SBOM.md  SECURITY.md  TECH_DEBT_AUDIT.md  docker-compose.yml  install.sh  pyproject.toml
0508fullaudit/: aicouncilA.txt  aicouncilB.txt
config/: README.md  admin.yml  admin.yml.example  object_store.yml.example  policy.yml
docs/: AGENT_NATIVE_EXECUTION.md  CAPABILITY_CATALOG.md  CONTROLLED_RUNTIMES.md  CONTROL_PLANE_FAILURE_CLASSES.md  CONTROL_PLANE_INVARIANTS.md  DEPLOYMENT.md  EXECUTION_SURFACE_CONFORMANCE.md  EXTERNAL_SYSTEM_ADAPTATION_PROMPT.md  EXTERNAL_SYSTEM_ONBOARDING_MANUAL.md  EXTERNAL_SYSTEM_ONBOARDING_PROMPT.md  GATEWAY_API_KEYS.md  MIGRATIONS.md  OBSERVABILITY.md  OFFICIAL_CONTRACT_CONFORMANCE.md  OFFICIAL_PROVIDER_STUDY.md  OOB_USER_EXPERIENCE_PRODUCT_SPEC.md  OPENAI_INTERACTION_CONTRACT.md  OPERATIONS_NOTES.md  PRODUCT_INTERFACE.md  PRODUCT_NORTH_STAR.md  PROVIDER_ADAPTERS.md  PROVIDER_OFFICIAL_CONFORMANCE.md  PROVIDER_OFFICIAL_STUDY.md  PROVIDER_PANOPTICON_CONTRACT.md  PROVIDER_VALIDATION.md  PUBLIC_RELEASE_CHECKLIST.md  RECIPE_DRAFT_TOOL.md  ROUTING_POLICY.md  RUNPOD_FLASH.md  RUNPOD_OFFICIAL_CONTRACT_AUDIT.md  RUNPOD_SERVERLESS_CATALOG.md  SAAS_V1_OPERATIONS.md  SDK_DISTRIBUTION.md  SETUP_PLAN.md  SUGANO_FLEET_ONBOARDING_PROMPT.md  TASK_PRODUCTION_STORY.md  TUPLE_VALIDATION.md  WORKLOAD_CONTRACT.md
gpucall/: __init__.py  acceptance_invariants.py  acceptance_replay.py  admin_automation.py  admission.py  agent_surface.py  app.py  app_helpers.py  artifact_reclaim.py  artifacts.py  attestation.py  audit.py  blocker_taxonomy.py  caller_auth_registry.py  candidate_sources.py  catalog.py  cli.py  compiler.py  config.py  config_fingerprint.py  configure.py  configure_registry.py  configure_targets.py  cost_policy.py  costing.py  credential_registry.py  credential_targets.py  credentials.py  dispatcher.py  domain.py  execution_catalog.py  handoff.py  handoff_package.py  installed_product_acceptance.py  lease_reaper.py  live_catalog.py  live_catalog_scope.py  local_dataref_worker.py  mcp_server.py  migrate.py  (+42 more)
gpucall_sdk/: __init__.py  client.py
scripts/: check_product_contamination.sh  check_provider_parity.py  generate_openai_contract.py  gpucall  materialize_provider_catalog.py  public_release_audit.sh  smoke_sdk.py
sdk/python/: README.md  pyproject.toml
sdk/python/gpucall_migrate/: __init__.py  cli.py
sdk/python/gpucall_recipe_draft/: __init__.py  cli.py  core.py  llm.py  recipe_intents.py  submit.py
sdk/python/gpucall_sdk/: __init__.py  client.py
sdk/python/gpucall_sdk/openai_contract/: __init__.py  chat_completions.json  chat_completions.py
sdk/python/tests/: test_client.py  test_recipe_draft.py
tasks/: example-caller-canary-report.json  example-caller-canary-report.md  handoff.md  migration-gateway-host-20260704.md  news-system-canary-report.json  news-system-canary-report.md  north-star-completion.md  oob-final-report.json  oob-final-report.md  oob-v2.0.67-final-report-20260620.json  oob-v2.0.67-final-report-20260620.md  provider-loop-report.json  provider-loop-report.md  sovereign-upgrade-20260704.md  v3-artifact-lifecycle-plan.md  v4-managed-control-plane-plan.md  v5-provider-platform-plan.md
tests/: conftest.py  test_admin_api_keys.py  test_agent_surface.py  test_app.py  test_artifact_reclaim.py  test_audit.py  test_blocker_contracts.py  test_catalog.py  test_cli_seed_liveness.py  test_compiler.py  test_config.py  test_costing.py  test_credentials_configure.py  test_deploy.py  test_deterministic_onboarding.py  test_dispatcher.py  test_execution_catalog.py  test_handoff_package.py  test_install_script.py  test_installed_product_acceptance.py  test_launch_check.py  test_launch_reporting.py  test_lease_reaper.py  test_live_catalog_scope.py  test_llm_engine.py  test_mcp_server.py  test_migrate.py  test_modal_worker.py  test_object_store.py  test_openai_contract.py  test_openai_facade_admission.py  test_openai_sdk_oracle.py  test_p1_audit_regressions.py  test_panopticon.py  test_price_cache.py  (+26 more)
(+7033 files in other folders)
