[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpucall"
version = "2.0.0"
description = "L7 governance gateway for leased GPU task execution"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34",
  "fastapi>=0.111",
  "httpx>=0.27",
  "jsonschema>=4.26.0",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]
providers = [
  "modal>=1.0",
  "paramiko>=3.4",
  "requests>=2.32",
  "runpod>=1.7",
  "runpod-flash>=0.1",
]

[project.scripts]
gpucall = "gpucall.cli:main"

[project.entry-points."gpucall.adapters"]
# External provider packages can register adapter builders in this group.

[project.entry-points."gpucall.configure_targets"]
# External provider packages can register gpucall configure targets in this group.

[project.entry-points."gpucall.credential_sources"]
# External provider packages can register credential env/probe definitions in this group.

[tool.setuptools.packages.find]
include = ["gpucall", "gpucall.*"]

[tool.setuptools.package-data]
gpucall = ["config_templates/**/*.yml", "config_templates/**/*.example"]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
