[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpucall-sdk"
version = "2.0.15"
description = "Lightweight Python SDK for gpucall v2.0 Gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[project.scripts]
gpucall-recipe-draft = "gpucall_recipe_draft.cli:main"

[tool.setuptools.packages.find]
include = ["gpucall_sdk*", "gpucall_recipe_draft*"]

[tool.setuptools.package-data]
gpucall_sdk = ["openai_contract/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires a running gpucall gateway",
]
